Deploy multi-tier app with health checks and scaled web/api services using Docker Swarm

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,15 @@
 http {
     upstream web_service {
+        # Swarm will automatically resolve 'web' to all containers running the web service
         server web:3000;
+        server web:3001;
     }
 
     upstream api_service {
+        # Swarm will automatically resolve 'api' to all containers running the api service
         server api:4000;
+        server api:4001;
+        server api:4002;
     }
 
     server {
@@ -12,7 +17,7 @@ http {
         server_name web.example.local;
 
         location / {
-            proxy_pass http://web_service;
+            proxy_pass http://web_service;  # Direct traffic to the 'web_service' upstream
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -25,7 +30,7 @@ http {
         server_name api.example.local;
 
         location / {
-            proxy_pass http://api_service;
+            proxy_pass http://api_service;  # Direct traffic to the 'api_service' upstream
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
