--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,47 +2,39 @@ version: '3.8'
 
 services:
   api:
-    build:
-      context: ./api  
-      dockerfile: Dockerfile  
+    image: my_stack_api:latest
     ports:
-      - "4000:4000"
+      - "4000-4002:4000"
     volumes:
       - ./api:/app
     working_dir: /app
     command: bash -c "npm install && npm start"
     environment:
-      - PORT=${API_PORT}
-      - DB=${API_DB}
-    depends_on:
-      - db
+      - PORT=4000
+      - DB=postgres://user1:password1@db:5432/busbud_db
     networks:
       - backend
 
   web:
-    build:
-      context: ./web  
-      dockerfile: Dockerfile   
+    image: my_stack_web:latest
     ports:
-      - "3000:3000"
+      - "3000-3001:3000"
     volumes:
       - ./web:/app
     working_dir: /app
     command: bash -c "npm install && npm start"
     environment:
-      - PORT=${WEB_PORT}
-      - API_HOST=${API_HOST}
-    depends_on:
-      - api
+      - PORT=3000
+      - API_HOST=http://api:4000
     networks:
       - backend
 
   db:
     image: postgres:9.6
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: user1
+      POSTGRES_PASSWORD: password1
+      POSTGRES_DB: busbud_db
     ports:
       - "5432:5432"
     volumes:
@@ -50,7 +42,7 @@ services:
     networks:
       - backend
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}"]
+      test: ["CMD", "pg_isready", "-U", "user1", "-d", "busbud_db"]
       interval: 10s
       retries: 5
       start_period: 10s
