--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Images
 on:
   push:
     branches:
-      - main  # Trigger the workflow on pushes to the main branch
+      - '*'  # Trigger the workflow on pushes to any branch
 
 jobs:
   build-and-deploy:
@@ -16,7 +16,7 @@ jobs:
 
     # Step 2: Log in to Docker Hub
     - name: Log in to Docker Hub
-      uses: docker/login-action@v3  # Updated to latest version
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
@@ -31,7 +31,7 @@ jobs:
       with:
         context: ./web  # Path to the web app's Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/buzbud-web1:latest
+        tags: yapadinithi/buzbud-web-action:${{ github.sha }}  # Tag using commit hash
 
     # Step 5: Build and Push the API Image
     - name: Build and push API image
@@ -39,6 +39,4 @@ jobs:
       with:
         context: ./api  # Path to the API's Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/buzbud-api:latest
-
-   
+        tags: yapadinithi/buzbud-api-action:${{ github.sha }}  # Tag using commit hash
