--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "redis": "^1.0.0",
     "redis-url": "^1.2.1",
     "serve-favicon": "~2.3.0",
-    "request": "2.72.0"
-  }
+    "request": "2.72.0",
+    "node-fetch": "^3.0.0"  // Ensure you are using a version that supports ESM
+  },
+  "type": "module"  // Add this to enable ES modules
 }
